--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>They sat in silence, staring at the fabric, not knowing it was Grandma’s way of deciding who deserved the truth.😱</title>
+<title>They sat in silence, staring at the fabric, not knowing it was Grandma’s 😱</title>
 <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
 <style>
